single/hotrod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotrod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: hotrod
    app.kubernetes.io/instance: jaeger
  name: jaeger-hotrod
  namespace: hotrod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: hotrod
      app.kubernetes.io/instance: jaeger
      app.kubernetes.io/name: jaeger
  template:
    metadata:
      labels:
        app.kubernetes.io/component: hotrod
        app.kubernetes.io/instance: jaeger
        app.kubernetes.io/name: jaeger
    spec:
      containers:
      - env:
        - name: JAEGER_AGENT_HOST
          value: agent-traces.monitoring.svc.cluster.local
        - name: JAEGER_AGENT_PORT
          value: "6831"
        image: jaegertracing/example-hotrod:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        name: jaeger-hotrod
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: hotrod
    app.kubernetes.io/instance: jaeger
  name: jaeger-hotrod
  namespace: hotrod
spec:
  ports:
  - name: hotrod
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: hotrod
    app.kubernetes.io/instance: jaeger
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotrod
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: hotrod    
spec:
  rules:
    - host: hotrod.3.16.154.209.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-hotrod
                port:
                  number: 80
