single/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true" 
spec:
  tls:
    - hosts:
      - tempo.172.31.14.138.nip.io
      secretName: nip-tls
  rules:
    - host: tempo.172.31.14.138.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 4317
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: loki.172.31.14.138.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cortex
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cortex.172.31.14.138.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortex
                port:
                  number: 9009
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: grafana.3.16.154.209.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: alert.3.16.154.209.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
